Change getLast() method to get()